--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,5 +9,18 @@ html(lang="en")
         header 
             h1 Noom
         main 
-            h2 Welcome to Noom
-        script(src="/public/js/app.js") 
+            div#welcome
+                form#roomname
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+                form#nickname
+                    input(placeholder="nickname", required, type="text")
+                    button Save
+            div#room
+                h3
+                ul
+                form
+                    input(placeholder="message", required, type="text")
+                    button Send
+        script(src="/socket.io/socket.io.js")
+        script(src="/public/js/app.js")
