show room list, count user in room, and use admin ui

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -16,6 +16,8 @@ html(lang="en")
                 form#nickname
                     input(placeholder="nickname", required, type="text")
                     button Save
+                h4 Open Rooms :
+                ul
             div#room
                 h3
                 ul
